--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,11 @@ body{
   margin:0;
   background-color:#1b1b32;
   color:#f5f6f7;
+  padding:0
 }
 
 label {
   display: block;
   margin: 0.5rem 0
+
 }
