apply css to the form

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,49 @@ body{
   margin:0;
   background-color:#1b1b32;
   color:#f5f6f7;
-  padding:0
+  padding:0;
+  font-family:Tahoma;
+  font-size: 16px;
 }
 
-label {
+h1, p{
+  text-align: center; 
+  margin: 1em auto;
+}
+
+form {
+  margin: 0 auto;
+  max-width: 500px; 
+  min-width: 300px;
+  width: 60vw;  
+}
+
+fieldset {
+  border: none;
+  padding: 2rem 0;
+  border-bottom:3px solid #3b3b4f;
+}
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
+
+input, textarea, select {
   display: block;
-  margin: 0.5rem 0
-
+  margin: 0;
+  margin-top: 10px; 
+  width:100%;
+  
 }
 
+.inline {
+  width:unset;
+  margin:0;
+  margin-right:0.5em;
+  vertical-align:middle;
+}
+
+input, textarea {
+  background-color:#0a0a23;
+  border:1px solid #0a0a23;
+}
