--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ input, textarea, select {
   margin: 0;
   margin-top: 10px; 
   width:100%;
-  
+  min-height: 2em;
 }
 
 .inline {
@@ -49,4 +49,27 @@ input, textarea, select {
 input, textarea {
   background-color:#0a0a23;
   border:1px solid #0a0a23;
+  color:#ffffff; 
+}
+
+input[type="submit"] {
+  display:block;
+  width:60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color:#3b3b4f;
+  border-color:white;
+  min-width:300px;
+  padding-bottom:2em;
+  padding-top:1em;
+  
+}
+
+input[type="file"] {
+  padding: 1px 2px;
+}
+
+a {
+  color: #dfdfe2; /* Changes the link color */
 }
